@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-07-18T08:08:43Z",
-  "count_outdated" : 537,
-  "uniques_outdated" : 98,
-  "count" : 579,
-  "uniques" : 110,
+  "timestamp" : "2022-07-18T16:12:16Z",
+  "count_outdated" : 539,
+  "uniques_outdated" : 100,
+  "count" : 592,
+  "uniques" : 114,
   "views" : [
-    {
-      "timestamp": "2022-07-04T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 2 ]
-    },
     {
       "timestamp": "2022-07-05T00:00:00Z",
       "count": 7,
@@ -60,6 +53,13 @@
       "count_minmax": [ 15, 16 ],
       "uniques": 2,
       "uniques_minmax": [ 1, 2 ]
+    },
+    {
+      "timestamp": "2022-07-18T00:00:00Z",
+      "count": 12,
+      "count_minmax": [ 12, 12 ],
+      "uniques": 3,
+      "uniques_minmax": [ 3, 3 ]
     }
   ]
 }
