@@ -1,12 +1,7 @@
 {
-  "count": 42,
-  "uniques": 11,
+  "count": 53,
+  "uniques": 13,
   "views": [
-    {
-      "timestamp": "2022-07-04T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-07-05T00:00:00Z",
       "count": 7,
@@ -41,6 +36,11 @@
       "timestamp": "2022-07-16T00:00:00Z",
       "count": 16,
       "uniques": 2
+    },
+    {
+      "timestamp": "2022-07-18T00:00:00Z",
+      "count": 12,
+      "uniques": 3
     }
   ]
 }
