@@ -1,3 +1,10 @@
+2022-07-18T16:12:16Z:
+* notice: last 14d: unq all: 13 53
+* notice: prev accum: outdated-unq outdated-all / unq all: 98 537 / 110 579
+* notice: next accum: outdated-unq outdated-all / unq all: 100 539 / 114 592
+* notice: prev exec diff / last date diff / accum: unq all: +3 +12 -0 -0 / +3 +12 -0 -0 / 3 12
+* notice: removed / changed dates: [2022-07-04] / [2022-07-18]
+
 2022-07-18T08:08:43Z:
 * notice: last 14d: unq all: 11 42
 * notice: prev accum: outdated-unq outdated-all / unq all: 98 537 / 111 580
